# fuzzer_tui

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  popup.rs  window.rs
src/utils/: centered_rect.rs  file_dialogue.rs  input_dialogue.rs  mod.rs
src/windows/: config.rs  fuzzing_window.rs  main_window.rs  mod.rs  project_window.rs
